# atlantida

./: .gitignore  PROJECT-SPECS.md  README.md  TODO.md  atlantida-lev-0.md  ciao  pyproject.toml  requirements.txt
doc/: ARCHITETTURA-MUSICALE.md  COMANDI.md  CONTRATTO-MODULAZIONI.md  DESIGN-MACRO.md  DESNIVEL-cat.md  IMPLEMENTAZIONE.md  VISUALIZATION_README.md  data_gopro.html  data_gpx.html  data_weather.html  dati_estraibili_gpx.md  index.html  pipeline.html  style.css  touchdesigner.html
gpx/: tappa01_Torino_Cascina_Nomade_Dogliani.gpx  tappa02_Cascina_Nomade_Genova.gpx  tappa03_Genova_Levanto.gpx  tappa04_Levanto_La_Spezia.gpx  tappa05_Firenze_San_Gimignano.gpx  tappa06_Orvieto_Bagnoregio_Lago_di_Bolsena.gpx  tappa07_Roma_Sabaudia.gpx  tappa08_Sabaudia_Formia.gpx  tappa09_Napoli_San_Nicola_Manfredi.gpx  tappa10_San_Nicola_Manfredi_San_Severo.gpx  tappa11_Peschici_Mattinata.gpx  tappa12_Mattinata_Castel_del_Monte.gpx
gpx/gopro/tappa01/: tappa01_GX013518.gpx  tappa01_GX013519.gpx  tappa01_GX013520.gpx  tappa01_GX013521.gpx  tappa01_GX013522.gpx  tappa01_GX013523.gpx  tappa01_GX013524.gpx  tappa01_GX013525.gpx  tappa01_GX013526.gpx  tappa01_GX013527.gpx  tappa01_GX013528.gpx  tappa01_GX013529.gpx  tappa01_GX013530.gpx  tappa01_GX013531.gpx  tappa01_GX013532.gpx  tappa01_GX013533.gpx  tappa01_GX013534.gpx  tappa01_GX013535.gpx  tappa01_GX013536.gpx  tappa01_GX013537.gpx  tappa01_GX013538.gpx  tappa01_GX013539.gpx  tappa01_GX013540.gpx  tappa01_GX013541.gpx  tappa01_GX013543.gpx  tappa01_GX013581.gpx
old/: audio_mapper.py  bpm_smoothing.py  constants.py  desnivel_gpx_to_td.py  gopro_mapper.py  gopro_tracks.py  terrain_classify.py  test_audio_mapper.py  test_bpm_smoothing.py  test_terrain.py  visualize_all_sonic.py  visualize_sonic.py
src/: desnivel_gpx_to_td.py  generate_sonic_index.py  gpmf_extract.py  poi_discovery.py  weather_fetch.py
src/desnivel/: __init__.py  _filters.py  config.py  events.py  events_builtin.py  modulation.py  pipeline.py  track.py
td/: 5particules.toe  desnivel_loader.py  frame_execute.py  osc_ableton_setup.py  primordiale.toe  secondiale.toe  terrain_pixel.glsl  trail_pixel.glsl
td/m4l/: desnivel.maxpat  desnivel_notes.js
tests/: test_arrival_climb.py  test_arrival_climb_classifier.py  test_bookends.py  test_coastal_classifier.py  test_coastal_stage_sea_view.py  test_filters.py  test_geo.py  test_harmony_modulator.py  test_loader.py  test_macro_modulator.py  test_osc_sink.py  test_osc_to_midi.py  test_pipeline_classifier.py  test_poi_detector.py  test_poi_registry.py  test_scaffolding.py  test_sea.py  test_summit.py  test_tension.py
(+71 files in other folders)
