[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "desnivel"
version = "0.1.0"
description = "Generative audiovisual system: GPX cycling data modulates a self-running ecosystem."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# Visualizzazione (CLI plot_stage). Non necessario per la pipeline core.
plot = ["matplotlib>=3.7"]
# OSC live (OscSink + bridge MIDI).
osc = ["python-osc>=1.8"]
# Bridge MIDI provvisorio verso Ableton (Binario A, si butta con M4L).
midi = ["mido>=1.3", "python-rtmidi>=1.5"]
# Geometria (SeaDetector, CoastalClassifier: shapefile costa + distanze).
geo = ["shapely>=2.0", "pyshp>=2.3"]
# Scoperta POI offline (tools/discover_poi.py, query Overpass).
discover = ["requests>=2.28"]
dev = [
    "pytest>=7",
    "matplotlib>=3.7",
    "python-osc>=1.8",
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "shapely>=2.0",
    "pyshp>=2.3",
    "requests>=2.28",
]

[project.scripts]
desnivel-run = "desnivel.cli.run_stage:main"
desnivel-all = "desnivel.cli.run_all:main"
desnivel-plot = "desnivel.cli.plot_stage:main"
desnivel-play = "desnivel.cli.play:main"
desnivel-bridge-midi = "desnivel.bridges.osc_to_midi:main"
desnivel-midi-sweep = "desnivel.tools.midi_sweep:main"
desnivel-discover-poi = "desnivel.tools.discover_poi:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
